# proxmox-mcp-server

./: README.md  pyproject.toml
src/proxmox_mcp/: server.py
